quick addition to thesis. fix to svn version tagging.

--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -865,6 +865,7 @@ For \{delta, DC/Spline\}, \{exponential, gaussian, cauchy\}, \{biased, unbiased 
 \item Variance of final parameters when faced with same ground truth, different noise
 \item MSE of (a new timeseries based on X(t) vs. ground truth) for all t
 \item Estimator Variance based on different noise runs
+\item Final Particle Distribution
 \end{enumerate}
 
 %note to self, epsilon should probably be uniform between 0 and something
