latex runs correctly now.

--- a/doc/thesis/references.bib
+++ b/doc/thesis/references.bib
@@ -374,7 +374,7 @@ ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000246766700003}},
 }
 
-@article{ ISI:000240969200015,
+@article{ ModelComparison,
 Author = {Deneux, Thomas and Faugeras, Olivier},
 Title = {{Using nonlinear models in fMRI data analysis: Model selection and
    activation detection}},
