--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -126,7 +126,7 @@ volume increases in addition to the local oxygen content. This leads to a Windke
 effect which further lags the normalization of oxygen content. The effect of
 all this is an overshoot in the oxygen content above the initial level. After
 the work of recharging is done, there may be a prolonged undershoot lasting
-as much as 90 seconds \cite{spatial_poststim}, though the reason for this
+as much as 90 seconds \cite{spatial_undershoot}, though the reason for this
 is debated \cite{origin_poststim}. 
 
 A large number of models have been proposed for the BOLD signal with varying
@@ -246,7 +246,7 @@ to have true physiological parameters as entry points for these various other
 model parameters. The physiological models for the BOLD signal are quite good
 and based on realistic physics. While the exact connection between a stimulus
 and the flow inducing signal is not precisely known, model fits are actually
-quite good \cite{ModelCompareison}. Regardless, being based on some real 
+quite good \cite{nonlinearmodels}. Regardless, being based on some real 
 physiological 
 parameter would allow for the establishment of reasonable priors and decrease
 model variance without breaking a sweat. Of course, using real parameters 
